[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hf_endpoint"
version = "0.1.0"
description = "Interact with HF inference endpoints"
authors = ["AMJ <jam1453@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"
pytest-mock = "3.12.0"
pydantic = "2.5.2"

[[tool.poetry.packages]]
include = "src"
from = "."