[project]
name = "hfendpoint3"
version = "0.1.6"
authors = [
  { name="AMJ", email="jam1453@gmail.com" },
]
description = "Test For HF Endpoint Utility Package"
long_description_content_type = "text/markdown"
readme = "README.md"

requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/barbaroja2000/hf_endpoint"
Issues = "https://github.com/barbaroja2000/hf_endpoint/issues"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hfendpoint3"
version = "0.1.6"
description = "Interact with HF inference endpoints"
authors = ["AMJ <jam1453@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"
pytest-mock = "3.12.0"
pydantic = "2.5.2"

[[tool.poetry.packages]]
include = "hfendpoint3"
from = "src"